--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/main.js" defer></script>
 </head>
 <body>
     <main class="dashboard">
     <section class="section--first">
-        <article class="card"></article>
-        <article class="card"></article>
-        <article class="card"></article>
-        <article class="card"></article>
+        <article class="card card--first">16.25</article>
+        <article class="card card--second">
+            <canvas id="js--chart--1"> </canvas>
+        </article>
+        <article class="card card--third"></article>
+        <article class="card card--fourth"></article>
     </section>
     <section class="section--second"></section>
 </main>
