--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <article class="card card--third"></article>
         <article class="card card--fourth"></article>
     </section>
-    <section class="section--second"></section>
+    <section class="section--second">
+        <canvas id="js--chart--2"></canvas>
+    </section>
 </main>
 </body>
 </html>
