--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <article class="card card--second">
             <canvas id="js--chart--1"> </canvas>
         </article>
-        <article class="card card--third"></article>
-        <article class="card card--fourth"></article>
+        <article class="card card--third">
+            <canvas id="js--chart--3"> </canvas>
+        </article>
+        <article class="card card--fourth">
+            <img id="floatzel" src="fotos/yd5syxq6.png" alt="">
+        </article>
     </section>
     <section class="section--second">
         <canvas id="js--chart--2"></canvas>
